[package]
name = "proxy-service"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-rustls = { version = "0.27", features = ["webpki-roots", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "server", "tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
